--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,18 +1,15 @@
 ---
 driver_plugin: vagrant
 platforms:
-- name: centos
+- name: centos-6.4-x86_64
   driver_config:
-    box: Berkshelf-CentOS-6.3-x86_64-minimal
-    box_url: https://dl.dropbox.com/u/31081437/Berkshelf-CentOS-6.3-x86_64-minimal.box
+    box: opscode-centos-6.4-x86_64
+    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-6.4_chef-11.4.4.box
     require_chef_omnibus: 11.4.4
     customize:
       cpus: 1
       memory: 256
-    network:
-      - ["private_network", { ip: "10.0.2.15" }]
 suites:
-- name: default
+- name: leiningen
   run_list:
     - recipe[leiningen]
-    - recipe[minitest-handler]
