--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,7 +13,7 @@ platforms:
 - name: ubuntu-12.04
   driver_config:
     box: opscode-ubuntu-12.04
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_chef-11.4.4.box_url
+    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_chef-11.4.4.box
     require_chef_omnibus: 11.6.0
     customize:
       cpus: 1
