--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,16 +5,16 @@ platforms:
 - name: centos-6.4-x86_64
   driver_config:
     box: opscode-centos-6.4-x86_64
-    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-6.4_chef-11.4.4.box
-    require_chef_omnibus: 11.6.0
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.4_chef-provisionerless.box 
+    require_chef_omnibus: 11.8
     customize:
       cpus: 1
       memory: 256
 - name: ubuntu-12.04
   driver_config:
     box: opscode-ubuntu-12.04
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_chef-11.4.4.box
-    require_chef_omnibus: 11.6.0
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box 
+    require_chef_omnibus: 11.8
     customize:
       cpus: 1
       memory: 256
