--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,12 +1,11 @@
 ---
 driver_plugin: vagrant
-provisioner: chef_zero
 platforms:
 - name: centos-6.4-x86_64
   driver_config:
     box: opscode-centos-6.4-x86_64
     box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.4_chef-provisionerless.box 
-    require_chef_omnibus: 11.8
+    require_chef_omnibus: true
     customize:
       cpus: 1
       memory: 256
@@ -14,7 +13,7 @@ platforms:
   driver_config:
     box: opscode-ubuntu-12.04
     box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box 
-    require_chef_omnibus: 11.8
+    require_chef_omnibus: true
     customize:
       cpus: 1
       memory: 256
